# WinterAmethystPlayground

./: .gitignore  Cargo.toml  package.bat  package.sh  rustfmt.toml
assets/: display_config.ron  entities.ron  events.ron
assets/ui/: dialogue.ron
resources/: bindings_config.ron  display_config.ron  events.ron
resources/texture/: background_spritesheet.ron  ground_spritesheet.ron  pong_spritesheet.ron  santa_spritesheet.ron  snowflake_spritesheet.ron
resources/ui/: dialogue.ron
src/: geometry.rs  main.rs  resources.rs
src/components/: animated.rs  gravity_affected.rs  mod.rs  velocity.rs  wind_affected.rs  wind_generator.rs  world_background.rs  world_collision_affected.rs
src/entities/: mod.rs  player.rs  snowflake.rs
src/events/: actions.rs  mod.rs  triggers.rs
src/levels/: mod.rs
src/pong/: mod.rs  paddle.rs
src/resources/: dialogue.rs  level.rs  mod.rs
src/states/: game.rs  mod.rs  paddle.rs  play.rs
src/systems/: animation.rs  camera.rs  control.rs  dialogue.rs  events.rs  gravity.rs  level_change.rs  mod.rs  movement.rs  paddle.rs  snowflakes.rs  wind.rs  world_collision.rs
texture/: background_spritesheet.ron  background_spritesheet.xcf  ground_spritesheet.xcf  santa_spritesheet.ron  santa_spritesheet.xcf  snowflake.xcf  snowflake_spritesheet.ron
ui/: dialogue.ron
