[package]
name = "test_game"
version = "0.1.0"
authors = []

[dependencies]
rand = "0.5"
noise = "0.5"
serde = "1"
serde_derive = "1"
log = "0.4"
euclid = "0.19"

[dependencies.amethyst]
version = "0.9.0"
#git = "https://github.com/amethyst/amethyst.git"
#rev = "b006afb049e5c325f4a5d1611502a3408b51a94a"
features = ["nightly"]
